--- a/intro.tex
+++ b/intro.tex
@@ -1,7 +1,7 @@
 \begin{figure}[t]
   \centering
   % \includegraphics[width=0.9\linewidth]{schematics} 
-  \includegraphics[width=0.99\linewidth]{front} % \\[-5pt]
+  \includegraphics[width=0.99\linewidth]{front_small} % \\[-5pt]
   \caption{Using a database of 3D CAD models, we generate NZ-WHO
     templates which can be used to either detect objects directly or
     enrich the output of an existing detector with high-quality,
