--- a/mcmc.tex
+++ b/mcmc.tex
@@ -73,7 +73,7 @@ $c = 0.1$ for all experiments.
 % templates
 \begin{figure}[t]
 \centering
-    \includegraphics[width=0.7\linewidth]{tuning2} \\ [-5pt]
+    \includegraphics[width=0.7\linewidth]{tuning2_small} \\ [-5pt]
     \caption{Search space that our fine-tuning stage handles (Sect.~\ref{sec:fine}).}
  \label{fig:moves}
 \end{figure}
