cam ready final

--- a/2349.tex
+++ b/2349.tex
@@ -37,7 +37,7 @@
 \title{Enriching Object Detection with 2D-3D Registration\\and Continuous Viewpoint Estimation}
 %\title{Enrich Object Detection : 2D-3D registration and continuous viewpoint estimation}
 
-\author{Christopher Bongsoo Choy\textsuperscript{\dag}, Michael Stark\textsuperscript{\dag \ddag}, Sam Corbett-Davies\textsuperscript{\dag}, Silvio Savarese\textsuperscript{\dag}\\
+\author{Christopher Bongsoo Choy\textsuperscript{\dag}, Michael Stark\textsuperscript{\ddag}, Sam Corbett-Davies\textsuperscript{\dag}, Silvio Savarese\textsuperscript{\dag}\\
 	\textsuperscript{\dag}Stanford University, \textsuperscript{\ddag}Max Planck Institute for Informatics\\
 	{\tt\small \{chrischoy, scorbett, ssilvio\}@stanford.edu, \textsuperscript{\ddag}stark@mpi-inf.mpg.de }
 % For a paper whose authors are all at the same institution,
@@ -145,8 +145,9 @@ Classes and PASCAL3D+ datasets.
 
 \paragraph{Acknowledgement}
 We acknowledge the support of NSF CAREER grant (N1054127), Ford-Stanford
-Innovation Alliance Award, DARPA, Korea Foundation for Advanced Studies and
-the Max Planck Center for Visual Computing \& Communication.
+Innovation Alliance Award, DARPA, Fulbright New Zealand, Korea Foundation for
+Advanced Studies and the Max Planck Center for Visual Computing \&
+Communication.
 
 \clearpage
 \clearpage
